--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "parcel": "^2.7.0",
+    "process": "^0.11.10",
     "sass": "^1.54.4"
   },
   "dependencies": {
